[gd_scene load_steps=12 format=3 uid="uid://cuqhb5i3jmuab"]

[ext_resource type="Script" uid="uid://cl606u4tiwoj2" path="res://scripts/Menu.gd" id="1_yqeox"]
[ext_resource type="FontFile" uid="uid://dyk2pijt4n06h" path="res://fonts/Unitblock-JpJma.ttf" id="3_con2f"]
[ext_resource type="Shader" uid="uid://dwwq4h0mr7t3v" path="res://shaders/background.gdshader" id="4_bgshader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bg"]
shader = ExtResource("4_bgshader")
shader_parameter/time_speed = 0.8
shader_parameter/flip_y = false
shader_parameter/sea_color_dark = Color(0.15, 0.05, 0.35, 1)
shader_parameter/sea_color_light = Color(0.3, 0.1, 0.55, 1)
shader_parameter/refraction_color = Color(0.7, 0.5, 0.9, 1)
shader_parameter/light_shaft_color = Color(0.6, 0.4, 0.8, 1)
shader_parameter/target_sea_color_dark = Color(0.15, 0.05, 0.35, 1)
shader_parameter/target_sea_color_light = Color(0.3, 0.1, 0.55, 1)
shader_parameter/target_refraction_color = Color(0.7, 0.5, 0.9, 1)
shader_parameter/target_light_shaft_color = Color(0.6, 0.4, 0.8, 1)
shader_parameter/color_blend = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_play"]
bg_color = Color(0.75, 0.55, 0.1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.85, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.3, 0.2, 0, 0.7)
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_play_hover"]
bg_color = Color(0.9, 0.7, 0.15, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.95, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(1, 0.8, 0.2, 0.35)
shadow_size = 8
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_secondary"]
bg_color = Color(0.12, 0.08, 0.04, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.55, 0.2, 0.7)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_secondary_hover"]
bg_color = Color(0.18, 0.12, 0.06, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.7, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.8, 0.6, 0.2, 0.25)
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exit"]
bg_color = Color(0.15, 0.06, 0.04, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.3, 0.2, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exit_hover"]
bg_color = Color(0.25, 0.1, 0.06, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.4, 0.3, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.8, 0.3, 0.2, 0.25)
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.06, 0.04, 0.02, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.55, 0.2, 0.7)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 10

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqeox")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_bg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Vignette" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.35)

[node name="DimOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.55)

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -240.0
offset_right = 220.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.88, 0.3, 1)
theme_override_colors/font_shadow_color = Color(0.3, 0.15, 0, 0.9)
theme_override_colors/font_outline_color = Color(0.2, 0.1, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 56
text = "Release The Card"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.9, 0.75, 0.6)
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 15
text = "The game is imposible to beat or you skill issue"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="PlayButton" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(360, 65)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.08, 0.04, 0, 1)
theme_override_colors/font_hover_color = Color(0.04, 0.02, 0, 1)
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_play")
theme_override_styles/hover = SubResource("StyleBoxFlat_play_hover")
text = "PLAY"

[node name="HowToPlayButton" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(360, 52)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9, 0.8, 0.55, 0.9)
theme_override_colors/font_hover_color = Color(1, 0.9, 0.6, 1)
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_secondary")
theme_override_styles/hover = SubResource("StyleBoxFlat_secondary_hover")
text = "How To Play"

[node name="SettingsButton" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(360, 52)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9, 0.8, 0.55, 0.9)
theme_override_colors/font_hover_color = Color(1, 0.9, 0.6, 1)
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_secondary")
theme_override_styles/hover = SubResource("StyleBoxFlat_secondary_hover")
text = "Settings"

[node name="CreditsButton" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(360, 52)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9, 0.8, 0.55, 0.9)
theme_override_colors/font_hover_color = Color(1, 0.9, 0.6, 1)
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_secondary")
theme_override_styles/hover = SubResource("StyleBoxFlat_secondary_hover")
text = "Credits"

[node name="ExitButton" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(360, 52)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.85, 0.5, 0.4, 0.9)
theme_override_colors/font_hover_color = Color(1, 0.65, 0.5, 1)
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_exit")
theme_override_styles/hover = SubResource("StyleBoxFlat_exit_hover")
text = "Exit"

[node name="HowToPlayPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -260.0
offset_right = 320.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="HowToPlayPanel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="InnerLayout" type="VBoxContainer" parent="HowToPlayPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PanelTitle" type="Label" parent="HowToPlayPanel/MarginContainer/InnerLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.1, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 32
text = "How To Play"
horizontal_alignment = 1

[node name="Divider" type="HSeparator" parent="HowToPlayPanel/MarginContainer/InnerLayout"]
layout_mode = 2

[node name="HowToPlayLabel" type="Label" parent="HowToPlayPanel/MarginContainer/InnerLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.88, 0.8, 0.95)
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 19
text = "1. Draw cards from the deck.

2. Select 3 cards from the edges of your hand.

3. Selected cards must sum to 10, 20, or 30.

4. Clear all cards until only one remains
    (K, Q, J, or 10) to win!"
autowrap_mode = 3

[node name="CloseButton" type="Button" parent="HowToPlayPanel/MarginContainer/InnerLayout"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.5, 0.4, 1)
theme_override_colors/font_hover_color = Color(1, 0.65, 0.5, 1)
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_exit")
theme_override_styles/hover = SubResource("StyleBoxFlat_exit_hover")
text = "Close"

[connection signal="pressed" from="CenterContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="HowToPlayPanel/MarginContainer/InnerLayout/CloseButton" to="." method="_on_close_button_pressed"]
